; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/extr_osd_client.c_target_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/extr_osd_client.c_target_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_osd_request_target = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ceph_osd_request_target*)* @target_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @target_destroy(%struct.ceph_osd_request_target* %0) #0 {
  %2 = alloca %struct.ceph_osd_request_target*, align 8
  store %struct.ceph_osd_request_target* %0, %struct.ceph_osd_request_target** %2, align 8
  %3 = load %struct.ceph_osd_request_target*, %struct.ceph_osd_request_target** %2, align 8
  %4 = getelementptr inbounds %struct.ceph_osd_request_target, %struct.ceph_osd_request_target* %3, i32 0, i32 3
  %5 = call i32 @ceph_oid_destroy(i32* %4)
  %6 = load %struct.ceph_osd_request_target*, %struct.ceph_osd_request_target** %2, align 8
  %7 = getelementptr inbounds %struct.ceph_osd_request_target, %struct.ceph_osd_request_target* %6, i32 0, i32 2
  %8 = call i32 @ceph_oloc_destroy(i32* %7)
  %9 = load %struct.ceph_osd_request_target*, %struct.ceph_osd_request_target** %2, align 8
  %10 = getelementptr inbounds %struct.ceph_osd_request_target, %struct.ceph_osd_request_target* %9, i32 0, i32 1
  %11 = call i32 @ceph_oid_destroy(i32* %10)
  %12 = load %struct.ceph_osd_request_target*, %struct.ceph_osd_request_target** %2, align 8
  %13 = getelementptr inbounds %struct.ceph_osd_request_target, %struct.ceph_osd_request_target* %12, i32 0, i32 0
  %14 = call i32 @ceph_oloc_destroy(i32* %13)
  ret void
}

declare dso_local i32 @ceph_oid_destroy(i32*) #1

declare dso_local i32 @ceph_oloc_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
